Fixed bug with border being blurred

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,9 +7,9 @@
     padding: 20px 0;
     display: block;
     position: absolute;
-    top: 50%;
+    top: 32%;
     left: 50%;
-    transform: translate(-50%, -120%);
+    transform: translateX(-50%);
     text-align: center;
     font-family: $main-font;
     font-weight: normal;
